# cogsy

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  notes
docs/: usage.md
scripts/: update_local.sh
src/: commands.rs  config.rs  main.rs  theme.rs  utils.rs
src/app/: cli.rs  csv.rs  database.rs  fromcli.rs  impl_app.rs  message.rs  mod.rs  request.rs  response.rs  update.rs
src/screens/: collection.rs  history.rs  mod.rs  popup.rs  profile.rs  traits.rs  wantlist.rs
