[package]
name = "cogsy"
version = "0.1.0"
authors = ["cartoon-raccoon <shaughn.chan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.15.0"
reqwest = "0.10.7"
serde = "1.0.115"
rusqlite = "0.23.1"
indicatif = "0.15.0"
clap = "2.33.2"