[package]
name = "cogsy"
version = "0.1.0"
authors = ["cartoon-raccoon <shaughn.chan@gmail.com>"]
description = "A curses-based CLI Discogs client"
readme = "README.md"
homepage = "https://github.com/cartoon-raccoon/cogsy"
repository = "https://github.com/cartoon-raccoon/cogsy"
license = "LGPL-2.1"
license-file = "LICENSE"
keywords = ["cogsy", "music", "vinyl", "records", "discogs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.15.0"
reqwest = {version = "0.10.7", features = ["blocking"]}
serde_json = "1.0.57"
serde = {version = "1.0.115", features = ["derive"]}
rusqlite = {version = "0.23.1", features = ["chrono"]}
clap = "2.33.2"
regex = "1.3.9"
toml = "0.5.6"
directories = "3.0.1"
chrono = "0.4.15"
unidecode = "0.3.0"
ansi_term = "0.6.3"